[metadata]
name = canvator
author = Amit Upadhyay (amitu.com)
author-email = amitu@amitu.com
summary = Python module to draw in canvas (educational tool)
description-file = README.adoc
home-page = https://www.canvator.com
license = BSD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages_root = src
packages =
    canvator
[global]
setup-hooks = pbr.hooks.setup_hook
